--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,62 @@ img,
 video {
   display: block;
 }
+
+// ---- my code----
+
+body {
+  font-family: "Roboto", serif;
+}
+
+.button {
+  margin: 50px;
+  width: min-content;
+  display: flex;
+  padding: 10px 20px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 25px;
+  border: 2px solid #f00;
+  background: white;
+  transition: 0.2s;
+  user-select: none;
+  cursor: pointer;
+}
+
+.icon {
+  color: #f00;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 100% */
+  transition: 0.2s;
+}
+
+.text {
+  color: #f00;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 18px; /* 100% */
+  transition: 0.2s;
+}
+
+.count {
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 128.571% */
+  transition: 0.2s;
+}
+
+.button.is-active {
+  background: #f00;
+  color: white;
+}
+
+.icon.is-active,
+.text.is-active,
+.count.is-active {
+  color: white;
+}
